--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,6 +42,7 @@ android {
         implementation 'commons-io:commons-io:2.8.0'
         implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
         implementation 'androidx.appcompat:appcompat:1.2.0'
+        compileOnly rootProject.findProject(":streams_channel")
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
